crates/plexuspact-contract/tests/snapshots/error_snapshots__snapshot_bad_severity.snap
---
source: crates/plexuspact-contract/tests/error_snapshots.rs
expression: "render(\"apiVersion: v1\\ndataset: t\\ncolumns:\\n  age: { type: int, checks: [{ min: 18, severity: fatal }] }\\n\")"
---
plexuspact::contract::parse

  × invalid severity `fatal`: expected `error` or `warn`, e.g. `{ min: 18,
  │ severity: warn }` (at `columns.age.checks[0]`)
   ╭─[contract.yaml:4:30]
 3 │ columns:
 4 │   age: { type: int, checks: [{ min: 18, severity: fatal }] }
   ·                              ┬
   ·                              ╰── invalid check
   ╰────
