crates/plexuspact-contract/tests/snapshots/error_snapshots__snapshot_empty_contract.snap
---
source: crates/plexuspact-contract/tests/error_snapshots.rs
expression: "render(\"\\n\")"
---
plexuspact::contract::parse

  × the contract is empty
  help: a minimal contract looks like:
        apiVersion: v1
        dataset: my_table
        columns:
          id: { type: string, required: true }
