crates/plexuspact-contract/tests/snapshots/error_snapshots__snapshot_missing_dataset.snap
---
source: crates/plexuspact-contract/tests/error_snapshots.rs
expression: "render(\"apiVersion: v1\\ncolumns:\\n  id: { type: string }\\n\")"
---
plexuspact::contract::parse

  × missing required key `dataset`
   ╭─[contract.yaml:1:1]
 1 │ apiVersion: v1
   · ─────┬────
   ·      ╰── missing key in this block
 2 │ columns:
   ╰────
  help: add e.g. `dataset: user_signups`
