crates/plexuspact-contract/tests/snapshots/error_snapshots__snapshot_unknown_column_field.snap
---
source: crates/plexuspact-contract/tests/error_snapshots.rs
expression: "render(\"apiVersion: v1\\ndataset: t\\ncolumns:\\n  id: { typ: string }\\n\")"
---
plexuspact::contract::parse

  × unknown key `typ` — did you mean `type`? (at `columns.id`)
   ╭─[contract.yaml:4:9]
 3 │ columns:
 4 │   id: { typ: string }
   ·         ─┬─
   ·          ╰── unrecognized key
   ╰────
  help: valid keys here are: type, description, required, pii, classification,
        stability, sunset, checks
