crates/plexuspact-contract/tests/snapshots/error_snapshots__snapshot_unknown_column_type.snap
---
source: crates/plexuspact-contract/tests/error_snapshots.rs
expression: "render(\"apiVersion: v1\\ndataset: t\\ncolumns:\\n  id: { type: text }\\n\")"
---
plexuspact::contract::parse

  × unknown value `text` (at `columns.id.type`)
   ╭─[contract.yaml:4:15]
 3 │ columns:
 4 │   id: { type: text }
   ·               ──┬─
   ·                 ╰── unrecognized value
   ╰────
  help: valid values here are: string, int, float, bool, date, datetime
        or upgrade the CLI (this one is X.Y.Z) if this contract targets a
        newer schema
